--- a/src/Components/Modal/style.module.css
+++ b/src/Components/Modal/style.module.css
@@ -10,6 +10,7 @@
     border-radius: 10px;
     position: fixed;
     top: 100px;
+    box-shadow: 0px 0px 10px #eee;
 }
 
 
@@ -22,15 +23,20 @@
 .dataTitle{
     display: flex;
 }
-.dataTitle span{
-    padding: 2%;
+.title{
+    padding: 10px;
     background-color: #eee;
 }
+.cxInput{
+   flex: 1;
+}
 .dataTitle input{
-    flex: 1;
+  
     border: none;
     outline: none;
     padding: 10px;
+    width: 100%;
+    height: 100%;
 }
 
 .dataContent{
@@ -72,7 +78,7 @@
     margin-right: 5px;
 }
 .modalButtons .BtnCancel:hover{
-    background-color: #db1822 ;
+    background-color: #b8040d;
     margin-right: 5px;
     cursor: pointer;
 }
@@ -81,7 +87,16 @@
     margin-left: 5px;
 }
 .modalButtons .BtnAdd:hover{
-    background-color:#0fd464;
+    background-color:#0b9e1f;
     margin-left: 5px;
     cursor: pointer;
+}
+
+.MensageErrorStyle{
+background-color:red;
+color:rgb(212, 41, 41);
+position: fixed;
+top: 1%;
+
+
 }
