--- a/src/Components/Modal/style.module.css
+++ b/src/Components/Modal/style.module.css
@@ -10,7 +10,7 @@
     border-radius: 10px;
     position: fixed;
     top: 100px;
-    box-shadow: 0px 0px 10px #eee;
+    box-shadow: 0px 0px 10px rgb(102, 101, 101);
 }
 
 
@@ -26,9 +26,12 @@
 .title{
     padding: 10px;
     background-color: #eee;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
 }
 .cxInput{
    flex: 1;
+  
 }
 .dataTitle input{
   
@@ -37,6 +40,9 @@
     padding: 10px;
     width: 100%;
     height: 100%;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+
 }
 
 .dataContent{
@@ -48,6 +54,8 @@
     padding: 2%;
     background-color: #eee;
     text-align: center;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 }
 
 .dataContent textarea{
@@ -56,6 +64,9 @@
     border: none;
     padding: 10px;
     outline: none;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+   
 
 }
 
