--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,7 @@
  
 }
 body{
-  overflow-y: auto;
-  height: 100%;
-  width: 100%;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
   background-color:#beccc9;
 }
