--- a/src/Components/Modal/style.module.css
+++ b/src/Components/Modal/style.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     padding: 15px;
     width: 600px;
-    background-color:#03324a;
+    background-color: #0e082b;
     border-radius: 10px;
     position: fixed;
     top: 180px;
