--- a/src/Components/BotaoFixo/style.css
+++ b/src/Components/BotaoFixo/style.css
@@ -6,13 +6,13 @@
     border: none;
     height: 50px;
     width:50px;
-    background-color: #180e4b;
+    background-color: #16104a;
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
     top: 50%;
-    left:90%;
+    left:93%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
 }
@@ -22,7 +22,7 @@
     background-color: #0e082b;
 }
 
-@media screen and (max-width:780px){
+@media screen and (max-width:912px){
     .botao-fixo{
         top: 80%;
         min-width: 40px;
@@ -34,4 +34,5 @@
         border-bottom: 10px;
         border: #03324a;
     }
+
 }
