--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,10 @@
   margin:0;
   padding:0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+  font-family: Arial;
+  overflow:none;
 }
 body{
   scroll-behavior: smooth;
- overflow:none;
   background-color:#beccc9;
 }
