--- a/src/Components/Modal/style.module.css
+++ b/src/Components/Modal/style.module.css
@@ -36,7 +36,8 @@
   
 }
 .dataTitle input{
-  
+    font-family: Arial, Helvetica, sans-serif;
+     font-size: 15px;
     border: none;
     outline: none;
     padding: 10px;
@@ -61,6 +62,8 @@
 }
 
 .dataContent textarea{
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
     resize: none;
     height:200px;
     border: none;
