--- a/src/Components/Modal/style.module.css
+++ b/src/Components/Modal/style.module.css
@@ -15,12 +15,7 @@
 }
 
 
-@media screen and (max-width:900px) {
-    .modalContainer{
-        width: 90vw;
-      
-    }
-}
+
 .dataTitle{
     display: flex;
 }
@@ -122,4 +117,30 @@ top: 1%;
 
 
 
+}
+@media screen and (max-width:700px) {
+    .modalContainer{
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        padding-bottom: 10px;
+       
+      
+    }
+   .dataContent textarea{
+      max-height: 79vh;
+      min-height: 75vh;
+    }
+    .modalButtons .BtnCancel{
+        box-shadow: none;
+    }
+     .modalButtons .BtnAdd{
+            box-shadow:none;
+        
+    }
 }
