--- a/src/Components/Modal/style.module.css
+++ b/src/Components/Modal/style.module.css
@@ -128,13 +128,14 @@ top: 1%;
         width: 100%;
         height: 100%;
         border-radius: 0;
-        padding-bottom: 10px;
-       
+        padding-bottom: 25px;
+       overflow: none;
       
     }
    .dataContent textarea{
       max-height: 79vh;
       min-height: 75vh;
+      overflow: auto;
     }
     .modalButtons .BtnCancel{
         box-shadow: none;
