--- a/src/Components/BotaoFixo/style.css
+++ b/src/Components/BotaoFixo/style.css
@@ -14,7 +14,8 @@
     top: 50%;
     left:93%;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
+    font-size: 24px;
+    box-shadow: 0 0 5px #eee;
 }
 
 .botao-fixo:hover{
