--- a/src/Components/Modal/style.module.css
+++ b/src/Components/Modal/style.module.css
@@ -119,29 +119,7 @@ top: 1%;
 
 }
 @media screen and (max-width:700px) {
-    .modalContainer{
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 0;
-        padding-bottom: 25px;
-       overflow: none;
-      
-    }
-   .dataContent textarea{
-      max-height: 79vh;
-      min-height: 75vh;
-      overflow: auto;
-    }
-    .modalButtons .BtnCancel{
-        box-shadow: none;
-    }
-     .modalButtons .BtnAdd{
-            box-shadow:none;
-        
-    }
+  .modalContainer{
+   margin: 0 15px;
+  }
 }
